--- a/src/app/pages/audiina/audiina.page.html
+++ b/src/app/pages/audiina/audiina.page.html
@@ -40,13 +40,13 @@
 <ion-content [fullscreen]="true">
   
   <ion-grid>
-    <ion-title>Audífonos Inalámbricos</ion-title>
+    <ion-title>Audifonos Inalámbricos</ion-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Audífonos Bluetooth<br>morados</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
             <p>$22.000</p>
           </ion-card-content>
@@ -56,7 +56,7 @@
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a2.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Audífonos Bluetooth<br>negros</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>negros</ion-card-title>
           <ion-card-content>
             <p>$105.000</p>
           </ion-card-content>
@@ -66,7 +66,7 @@
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a3.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Audífonos Bluetooth<br>rojos</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>rojos</ion-card-title>
           <ion-card-content>
             <p>$50.000</p>
           </ion-card-content>
@@ -82,7 +82,7 @@
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Audífonos Bluetooth<br>azules</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
             <p>$75.000</p>
           </ion-card-content>
@@ -92,7 +92,7 @@
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a5.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Audífonos Bluetooth<br>blancos</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>blancos</ion-card-title>
           <ion-card-content>
             <p>$35.000</p>
           </ion-card-content>
@@ -102,7 +102,7 @@
       <ion-card>
         <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br>verdes</ion-card-title>
+          <ion-card-title>Audifonos Bluetooth<br>verdes</ion-card-title>
           <ion-card-content>
             <p>$55.000</p>
           </ion-card-content>
