--- a/src/app/pages/r4/r4.page.html
+++ b/src/app/pages/r4/r4.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">r4</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/RELOJES ANALOGO/r4.jpeg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Reloj Analógico negro fondo azul</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $80.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Reloj analógico con esfera en tono negro y
+           fondo azul, fusiona elegancia y un toque de
+            originalidad. Ideal para aquellos que 
+            buscan un reloj clásico pero con un detalle 
+            único que resalta su estilo..</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
