--- a/src/app/pages/ai2/ai2.page.html
+++ b/src/app/pages/ai2/ai2.page.html
@@ -4,10 +4,24 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ai2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/AUDIFONOS BLUTU/a2.jpg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Audífonos Bluetooth negros</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $25.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Audífonos Bluetooth en elegante negro, 
+          brindan conectividad inalámbrica con sofisticación.
+           Ideal para quienes valoran la comodidad y la calidad
+            del sonido sin ataduras.</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
