--- a/src/app/pages/ai3/ai3.page.html
+++ b/src/app/pages/ai3/ai3.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ai3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/AUDIFONOS BLUTU/a3.webp" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Audifonos Bluetooth rojos</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $25.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Audífonos Bluetooth en audaz rojo,
+           proporcionan conectividad sin cables
+            con un toque de estilo. Perfectos para 
+            quienes buscan libertad de movimiento y
+             un aspecto llamativo en sus dispositivos de audio.</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
