--- a/src/app/pages/ai4/ai4.page.html
+++ b/src/app/pages/ai4/ai4.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ai4</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Audifonos Bluetooth azules</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $46.550</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Audífonos Bluetooth en tono azul,
+           ofrecen conectividad inalámbrica con
+            un toque de frescura. Ideales para quienes
+             buscan comodidad y estilo en su experiencia
+              auditiva sin necesidad de cables..</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
