--- a/src/app/pages/ai6/ai6.page.html
+++ b/src/app/pages/ai6/ai6.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ai6</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Audifonos Bluetooth verde</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $54.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Audífonos Bluetooth en verde, 
+          brindan conectividad inalámbrica
+           con un toque de naturaleza. Perfectos
+            para quienes desean comodidad y un 
+            estilo distintivo en sus dispositivos de audio.</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
