--- a/src/app/pages/r3/r3.page.html
+++ b/src/app/pages/r3/r3.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">r3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/RELOJES ANALOGO/r3.webp" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo" style="font-size: 50px;">Reloj Analógico Negro con toques azules</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $54.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Reloj analógico negro con acentos
+           en azul, une elegancia y modernidad
+            en un solo accesorio. Perfecto para
+             quienes buscan un estilo sofisticado
+              con un toque de color audaz en su reloj de pulsera.</p>
+          <br>
+          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
