--- a/src/app/pages/r6/r6.page.html
+++ b/src/app/pages/r6/r6.page.html
@@ -4,10 +4,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">r6</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/RELOJES ANALOGO/r6.jpg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Reloj Analógico cafe fondo azul</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $250.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Reloj analógico en tono café con
+          esfera de fondo azul, combina la
+          calidez de los colores terrosos
+          con un toque de frescura. Ideal
+          para aquellos que buscan un reloj
+          clásico con un toque de originalidad en su diseño.</p>
+        <br>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
