--- a/src/app/pages/rd1/rd1.page.html
+++ b/src/app/pages/rd1/rd1.page.html
@@ -1,13 +1,28 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>rd1</ion-title>
+    <ion-title>r1</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">rd1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/digitales/rd1.jpeg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Reloj Digital verde</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $25.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Reloj digital en verde, ofrece
+          una pantalla nítida y llamativa.
+          Perfecto para quienes buscan simplicidad
+          y modernidad en la visualización de
+          la hora y otras funciones.</p>
+        <br>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
