--- a/src/app/pages/rd6/rd6.page.html
+++ b/src/app/pages/rd6/rd6.page.html
@@ -1,13 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>rd6</ion-title>
+    <ion-title>r1</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">rd6</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/digitales/rd6.jpg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">Reloj Digital negro con azul</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $170.000</p>
+        <br>
+        <p class="subti">Descripción:</p>
+        <p>Reloj digital en negro con 
+          detalles en azul, combina 
+          estilo y funcionalidad de 
+          manera moderna. Perfecto 
+          para quienes buscan un reloj 
+          que resalte con un toque de color 
+          y una pantalla clara para ver la hora y más.</p>
+        <br>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
