--- a/src/app/pages/ag3/ag3.page.scss
+++ b/src/app/pages/ag3/ag3.page.scss
@@ -7,15 +7,16 @@
 }
 
 .custom-card {
+    background: #222222;
     display: flex;
     align-items: center;
     width: 80%;
 }
 
 .card-image {
-    width: 120%;
+    width: 100%;
     /* Aumenta aún más el ancho de la imagen */
-    max-width: 500px;
+    max-width: 450px;
     object-fit: cover;
 }
 
@@ -38,7 +39,7 @@
 
 p {
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     text-align: left;
     font-family: 'ADLaM Display';
 }
@@ -86,5 +87,6 @@ p {
         font-size: 35px;
         text-align: left;
     }
+    
     
 }
