--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,85 @@
 #container a {
   text-decoration: none;
 }
+/* Importar fuente */
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+/* Estilos del título de la tarjeta */
+ion-card-title {
+  font-size: 65px;
+  font-family: 'Abril Fatface', cursive;
+}
+
+/* Fondo */
+ion-content {
+  --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+}
+
+/* Estilos del grid */
+ion-grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Esto centra verticalmente en la ventana */
+
+  ion-row {
+    ion-card {
+      border-radius: 45px;
+      background-color: rgb(0, 0, 0);
+      max-width: 450px; /* Ajusta el ancho máximo de la tarjeta según tus necesidades */
+      width: 650px; /* Asegura que la tarjeta ocupe todo el ancho disponible */
+
+      /* Estilos de la imagen */
+      img {
+        display: block;
+        margin: 0 auto; /* Centrar la imagen horizontalmente */
+        width: 250px;
+        height: 250px;
+      }
+
+      /* Estilos del texto en la tarjeta */
+      ion-card-content {
+        padding: 20px; /* Agregar padding en lugar de margen para el contenido */
+      }
+    }
+  }
+}
+//esto es lo de los botones.
+button{
+  border-radius: 30px;
+  font-size: 25px;
+
+}
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  display: table-cell;
+  max-width: 600px;
+}
+
+.example-button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
+
