--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -10,30 +10,23 @@
         <ion-card-title>Inicio de sesión</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <form id="registration-form" (ngSubmit)="onLogin()">
-          <ion-item>
-            <ion-label position="floating">Correo electrónico:</ion-label>
-            <ion-input type="email" placeholder="juanito.perez@gmail.com" (keydown)="onKeyDown($event)" required
-                       [(ngModel)]="email" name="email" #emailInput="ngModel"
-                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
-          </ion-item>
-          <ion-note *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)">
-            Ingresa un correo electrónico válido y no lo dejes vacío.
-          </ion-note>
+        <div class="example-container">
+          <mat-form-field>
+            <mat-label>Enter your email</mat-label>
+            <input matInput placeholder="pat@example.com" [formControl]="email" required>
+            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+          </mat-form-field>
+        </div>
+        <div class="example-container">
+          <mat-form-field>
+            <mat-label>Enter your password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
 
-          <ion-item>
-            <ion-label position="floating">Contraseña:</ion-label>
-            <ion-input type="password" placeholder="********************" required [(ngModel)]="password" name="password"
-              #passwordInput="ngModel" minlength="3" maxlength="15" (keydown)="onKeyDown($event)"
-              pattern="^(?=.*\d{0,})(?=.*[a-zA-Z])(?=.*[!@#$%^&*-_.,])(?!.*\s).{3,15}$"></ion-input>
-          </ion-item>
-          
-
-          <br>
-          <ion-button [routerLink]="['/tienda']"  expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
-
-          <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1>
-        </form>
       </ion-card-content>
     </ion-card>
   </div>
