CAMBIOS EN EL INICIO DE SESION

--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -12,15 +12,15 @@
       <ion-card-content>
         <div class="example-container">
           <mat-form-field>
-            <mat-label>Enter your email</mat-label>
+            <mat-label>Ingresa tu correo:</mat-label>
             <input matInput placeholder="pat@example.com" [formControl]="email" required>
             <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
           </mat-form-field>
         </div>
         <div class="example-container">
           <mat-form-field>
-            <mat-label>Enter your password</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
+            <mat-label>Ingresa tu contraseña:</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
