--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
@@ -1,4 +1,6 @@
 ion-card {
+    
+    width: 750px;
     background: #222222;
 }
 
@@ -36,6 +38,7 @@ ion-content {
 .example-container mat-form-field + mat-form-field {
     margin-left: 8px;
   }
+  
 //clave=
 .example-container mat-form-field + mat-form-field {
     margin-left: 8px;
