--- a/src/app/pages/inicio/registro/registro.page.scss
+++ b/src/app/pages/inicio/registro/registro.page.scss
@@ -1,3 +1,55 @@
-ion-card{
-    background: #222222;
-}
+
+  
+  /* este es el fondo */
+  ion-content {
+    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+  }
+  
+  ion-input {
+    width: 100%;
+  }
+  /* Centrar el contenido verticalmente y horizontalmente */
+.fondo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0; /* Color de fondo */
+  }
+  
+  .center-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* Estilo para las tarjetas de entrada */
+  .input-card {
+    width: 80%;
+    max-width: 400px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Estilo para los mensajes de error */
+  .error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  
+  /* Personaliza el borde y el padding de los campos de entrada */
+  ion-input {
+    --padding-start: 15px;
+    --padding-end: 15px;
+    --border-radius: 8px;
+    line-height: 2.5; /* Ajusta el valor según tus preferencias */
+    margin-bottom: 15px;
+    
+  }
+  ion-card-title{
+    font-size: 60px;
+  }
+  
+  
